--- a/lang/en.json
+++ b/lang/en.json
@@ -88,6 +88,17 @@
         "step1_text": "1) Please write your description of the movement:",
         "onomatopoeia_label": "Movement Description:",
         "onomatopoeia_placeholder": "Describe the movement (e.g., arms going up, hands closing, head turning left)",
+        "emotion_label": "Emotion:",
+        "emotion_placeholder": "Select an emotion",
+        "emotion_options": {
+            "joy": "Joy",
+            "sadness": "Sadness", 
+            "anger": "Anger",
+            "surprise": "Surprise",
+            "fear": "Fear",
+            "disgust": "Disgust",
+            "contempt": "Contempt"
+        },
         "step2_text": "2) Place the cursor of the video player at where the movement you want to describe begins and press the \"Get starting time\" button",
         "get_start_button": "Get starting time",
         "start_time_label": "Movement Start Time:",
@@ -121,8 +132,8 @@
         "show_introduction": "Show Introduction",
         "hide_introduction": "Hide Introduction",
         "completion_title": "Congratulations!",
-        "completion_text": "Well done! You have finished all the videos. Let's start the second part of the experiment.",
-        "continue_to_reasoning": "Continue to Reasoning",
+        "completion_text": "Well done! You have finished all the videos. Thank you for your participation!",
+        "continue_to_reasoning": "",
         "stay_on_page": "Stay on Page",
         "save_error": "Failed to save response. Please try again.",
         "audio_start_error": "Failed to start recording. Please check your microphone.",
@@ -174,31 +185,5 @@
         "step10_title": "Video Button Colors",
         "step10_text": "The video buttons change color to show your progress: Grey = not yet completed. Green = you've saved at least one onomatopoeia. Blue = the current video you're watching. Yellow = you've indicated the video has no onomatopoeia.",
         "step10_instruction": "You've completed the tutorial! Click 'Complete Tutorial' when ready."
-    },
-    "reasoning": {
-        "page_title": "Explain Your Movement Descriptions",
-        "participant_name": "Participant: ",
-        "section_title": "Movement Description to Explain:",
-        "video_title": "Video",
-        "show_introduction": "Show Introduction",
-        "hide_introduction": "Hide Introduction",
-        "introduction_text": "Please explain your reasoning for each movement description you entered. You can change the description by using the arrows on the left and right of the text entry area, or by swiping the text entry area left or right. You can look at the part of the video where you annotated the movement by using the \"Show it\" button.",
-        "onomatopoeia_for_video": "Your movement description for video {video}: \"{onomatopoeia}\"",
-        "reasoning_label": "Explain why you chose this description:",
-        "reasoning_placeholder": "Please explain your reasoning (minimum 5 characters)...",
-        "show_button": "Show it",
-        "save_button": "Save Explanation",
-        "saving_button": "Saving...",
-        "time_range": "from {start} to {end}",
-        "no_onomatopoeia": "No movement descriptions found.",
-        "progress": "{completed} of {total} explanations provided",
-        "success_saved": "Reasoning saved successfully!",
-        "saved_reasoning": "Saved reasoning: {reasoning}",
-        "error_saving": "Failed to save reasoning. Please try again.",
-        "error_min_characters": "Please provide at least 5 characters for your explanation.",
-        "completion_title": "Thank You for Your Participation!",
-        "completion_message": "You have completed all reasoning explanations. Thank you for your valuable contribution to our research!",
-        "completion_note": "You can stay on this page if you wish to review or modify any of your answers.",
-        "stay_on_page": "Stay on Page"
     }
 }
